[package]
name = "dsc"
version = "0.1.0"
authors = ["Robert Zieba <robert@zieba.site>"]
edition = "2018"

[[bin]]
name = "dsc"
path = "src/dsc/main.rs"

[[bin]]
name = "dsi"
path = "src/dsi/main.rs"

[lib]
name = "diesel_lib"
path = "src/lib/lib.rs"

[dependencies]
nom = "6.1.2"
nom_locate = "3.0.1"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
clap = "2.33.3"